# ExtremeclimatePy

./: .gitignore  LICENSE.MD  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
ExtremeclimatePy/: UserIndex.py  UserModel.py  compoundanalyzer_v3_alpha.py  compoundanalyzer_v4_beta.py  compoundanalyzer_v5_beta.py
ExtremeclimatePy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ExtremeclimatePy/examples/CC_3vars_PCP_TMN_TMX/input/Climate_ref_randomness_2/: pcp.txt
ExtremeclimatePy/examples/CC_3vars_PCP_TMN_TMX/input/Climate_ref_randomness_4/: tmn.txt
ExtremeclimatePy/examples/CC_3vars_PCP_TMN_TMX/input/Pcp/: Other_inputs.txt
ExtremeclimatePy/examples/CC_3vars_PCP_TMN_TMX/input/Tmn/: Sub_grids_Val_Tmn.txt
ExtremeclimatePy/examples/case_study_2_Zurich_PCP_TMN_TMX/input/Climate_ref/: tmx.txt
ExtremeclimatePy/examples/case_study_3_Basel_WBGT/input/: info.txt
compound-extremes/: compoundanalyzer.py
compound-extremes/src/: compoundanalyzer.py  compoundanalyzer_v2_alpha.py
examples/CC_3vars_PCP_TMN_TMX/input/Pcp/: Sub_grids_Day_Pcp.txt  Sub_grids_Val_Pcp.txt
examples/CC_3vars_PCP_TMN_TMX/input/Tmx/: Sub_grids_Day_Tmx.txt
examples/CC_Tmax_Tmin/input/Climate_ref_randomness_1/: tmin.txt
examples/CC_Tmax_Tmin/input/Tmax/: Other_inputs.txt  Sub_grids_DayTmax.txt  Sub_grids_TempTmax.txt
examples/CC_Tmax_Tmin/input/Tmin/: Sub_grids_DayTmin.txt  Sub_grids_TempTmin.txt
src/: compoundanalyzer_v2_alpha.py  compoundanalyzer_v3.py
ven_ExtremePy/Scripts/: activate  activate.bat
(+16 files in other folders)
