[metadata]
name = ExtremeclimatePy
version = 0.0.3.2
author = Saeid A. Vaghefi, Veruska Muccione
author_email = saeid.vaghefi@geo.uzh.ch, veruska.muccione@geo.uzh.ch
description = analyzing compound extreme events
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saeedashraf/ExtremeclimatePy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True